--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body{
 }
 
 .container{
-    margin: 190px;
+    margin: 248.4px;
     display: grid;
-    grid-template-columns: 420px 600px;
+    grid-template-columns: 420px 595px;
     grid-template-rows: 1fr;
     grid-column-gap: 20px;
     background: hsl(229, 57%, 11%);
@@ -31,7 +31,6 @@ body{
    
 }
 
-
 .fylo-logo{
     margin-top: 50px;
     margin-left: 50px;
@@ -40,20 +39,57 @@ body{
 .icons{
     margin-bottom: 50px;
     margin-left: 48.6px;
-    margin-top: 20px;
+    margin-top: 35px;
+}
+
+/* Adds background behind the document icon in the <div> */
+.docu-back{
+    background: hsl(229, 57%, 11%);
+    width: 46.6px;
+    border-radius: 8px;
+    margin-left:4.6px;
 }
 
 .document-icon{
     margin-right: 20px;
-    margin-top: 20px;
-    margin-left:15px;
+    margin-top: 10px;
+    margin-left:14.6px;
+    margin-bottom: 5px;
 }
 
 
+/* Adds background behind the folder icon in the <div> */
+.folder-back{
+        background: hsl(229, 57%, 11%);
+        width: 44.6px;
+        height: 44px;
+        border-radius: 8px;
+        margin-left:80px;
+        margin-top: -44px;
+    }
+
+
 .folder-icon{
-     margin-right: 20px;
-    margin-top: 20px;
-    margin-left:8px;
+   
+    margin-top: 12px;
+    margin-left:10.8px;
+    margin-bottom: 5px;
+}
+
+/* Adds background behind the upload icon in the <div> */
+
+.upload-back{
+    background: hsl(229, 57%, 11%);
+        width: 44.6px;
+        height: 44px;
+        border-radius: 8px;
+        margin-top:-44px;
+}
+
+.upload-icon{
+    margin-top: 13.8px;
+    margin-left:10px;
+    margin-bottom: 5px;
 }
 
 /* Box #2 */
@@ -68,14 +104,14 @@ body{
 .box-2 p{
     color: #fff;
     font-size: 14px;
+    margin-top: 40px;
+    margin-left: 48px;
     
-    
+}
+.used-GB{
+    font-weight: 700;
 }
 
-.usage-bar{
-    background:linear-gradient( hsl(6, 100%, 80%), hsl(335, 100%, 65%) );
-    
-}
 
 .attribution { font-size: 11px; text-align: center; color: #fff;}
 .attribution a { color: hsl(228, 45%, 44%); } 
