--- a/style.css
+++ b/style.css
@@ -24,25 +24,21 @@
         height: 220px;
         width: 325px;
     }
-  .box-2{
-    width: 325px;
-    height: 165px;
-   position: relative;
-   bottom: 30px;
-  }
-  .usagebar{
-    width: 262px;
-    height: 20px;
-  }
 
-  .usagebar .insidebar{
-    width: 193px;
-    height: 20px;
-}
+    .box-2 {
+        /* position: relative; */
+        top: 40px;
+        padding: 10px;
+        width: 380px;
+        /* margin-top: 20px; */
+        height: 165px;
+    }
+
 .usagebar .whiteball{
     width: 20px;
 height: 20px;
 }
+
 #tooltip{
     border-radius: 10px;
     position: relative;
@@ -81,23 +77,19 @@ left: 20px;
     .box-1 {
         position: relative;
         top: 190px;
-        left: 20px;
+        /* left: 20px; */
         height: 220px;
         width: 375px;
     }
     .box-2 {
         position: relative;
         top: 40px;
-     
-        width: 540px;
-    height: 165px;
+        width: 380px;
+        padding: 20px;
+        height: 165px;
     }
     .usagebar{
-        width: 459px;
-    height: 20px;
-    }
-    .usagebar .insidebar{
-        width: 339px;
+        width: 100%;
         height: 20px;
     }
     .usagebar .whiteball{
@@ -110,14 +102,14 @@ left: 20px;
     #tooltip:after {
         content: "";
         position: absolute;
-        bottom: 0;
-        left: 20%;
+        bottom: 120px;
+        left: 79%;
         border: 30px solid transparent;
         border-top-color: #ffffff;
         border-bottom: 0px;
         border-right: 0px;
-        margin-bottom: 120.9px;
-        margin-left: 352px;
+        /* margin-bottom: 120.9px; */
+        /* margin-left: 352px; */
     }
 
     .start{
@@ -126,7 +118,7 @@ left: 20px;
     }
     .end{
         position: relative;
-        left: 150px;
+        left: 50px;
     }
     .attribution {
         position: relative;
@@ -165,10 +157,7 @@ left: 20px;
     height: 20px;
     }
 
-    .usagebar .insidebar{
-        width: 339px;
-        height: 20px;
-    }
+
     .usagebar .whiteball{
         width: 20px;
     height: 20px;
@@ -194,7 +183,6 @@ left: 20px;
         top: 265px;
     }
 }
-
 @media only screen and (min-width:1900px) {
     body {
         background-image: url("images/bg-desktop.png");
@@ -212,7 +200,7 @@ left: 20px;
 .box-1 {
     border-radius: 10px 100px 10px 10px;
     background: hsl(228, 56%, 26%);
-    
+
 }
 
 .fylo-logo {
@@ -283,7 +271,7 @@ left: 20px;
 
 .box-2 {
     background: hsl(228, 56%, 26%);
-    
+
     border-radius: 10px;
 }
 
@@ -302,30 +290,28 @@ left: 20px;
 
 .usagebar {
     background: hsl(229, 57%, 11%);
-    
     border-radius: 20px;
     margin-top: 20px;
 }
 
 .usagebar .insidebar {
     background-image: linear-gradient(to right, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
-   
     border-radius: 10px;
     margin-left: 0px;
     background-position: center;
+    width: 300px;
 }
 
 .usagebar .whiteball {
     background: #ffffff;
     border-radius: 50%;
-    
+
     margin-right: 0;
 }
 
 .limits {
     font-weight: 700;
     display: flex;
-
     margin-top: -30px;
 }
 
@@ -337,9 +323,8 @@ left: 20px;
     background-color: #fff;
     width: 190px;
     height: 84px;
-    
-    margin-top: -230px;
-    margin-right: 50px;
+    margin-top: -251px;
+    margin-right: 30px;
 }
 
 
